# glzw

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/Common/: zwhead.hpp
include/GLZW/: Texture.h  Vertex.h  Vertex.hpp  VertexBuilder.h  glzw.hpp
include/Scene/: AbstractMesh.hpp  CubeModel.hpp  Mesh.hpp  MyMesh.hpp  Scene.hpp  Shader.hpp
include/Window/: zwWindow.hpp
note/: target.txt
resource/: ColorTri.fs  RotateColorTri.fs  RotateColorTri.vs
src/GLZW/: Shader.cpp  Shader.hpp  Texture.cpp  Texture.h  Vertex.cpp  Vertex.hpp  VertexBuilder.h  glzw.cpp  glzw.hpp
src/RHI/OpenGL/: Shader.cpp
src/Scene/: AbstractMesh.hpp  Camera.hpp  CubeModel.cpp  CubeModel.hpp  Mesh.hpp  Model.hpp  Scene.hpp  testModel.cpp  testModel.h
src/Window/: AbstractWindow.cpp  AbstractWindow.hpp  zwWindow.cpp  zwWindow.hpp
src/learn/: MyCube2.cpp  MyTriangle.cpp  Triangle.cpp
src/other/: AutoRightClick.cpp
test/: CMakeLists.txt  main.cpp  testGLFWthreadSafe.cpp
test/ClassFCoun/: P3.3.5.cpp  sizeof.cpp
test/ClassFExample/: main_190502.cpp
test/L_FileSystem/: main.cpp
test/YourCraft/: main.cpp
